--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,6 @@
   width: 100%;
   user-select: text;
   padding: 9px 12px 11px;
-  text-align: left;
 }
 
 .react-input-emoji--input img {
@@ -97,6 +96,7 @@
   outline: none;
   cursor: pointer;
   flex-shrink: 0;
+  line-height: 0;
 }
 
 .react-input-emoji--button svg {
